--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectDTS">
-        <activity android:name=".RecylerViewActivity"></activity>
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".IntroActivity" />
+        <activity android:name=".RecyclerViewDetailActivity"></activity>
+        <activity android:name=".RecylerViewActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
