--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjectDTS">
-        <activity android:name=".RecyclerViewDetailActivity"></activity>
+        <activity android:name=".SongDetailActivity"></activity>
+        <activity android:name=".RecyclerViewDetailActivity" />
         <activity android:name=".RecylerViewActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
